[gd_scene load_steps=6 format=3 uid="uid://bk2wd0sujgj3l"]

[ext_resource type="Script" path="res://scripts/Completed.gd" id="1_p1v6n"]
[ext_resource type="Theme" uid="uid://js5o5hi387g5" path="res://themes/button_theme.tres" id="2_job75"]
[ext_resource type="Texture2D" uid="uid://cpx1hskl15b7m" path="res://assets/buttons/Exit.png" id="3_7dc6s"]
[ext_resource type="Texture2D" uid="uid://d1b3h22t3cjx7" path="res://assets/buttons/Retry.png" id="4_e0gnn"]
[ext_resource type="Texture2D" uid="uid://covoxdyl01chb" path="res://assets/buttons/Next.png" id="5_l7pl7"]

[node name="Completed" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p1v6n")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Уровень пройден!"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Exit" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme = ExtResource("2_job75")
icon = ExtResource("3_7dc6s")
icon_alignment = 1

[node name="Retry" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme = ExtResource("2_job75")
icon = ExtResource("4_e0gnn")
icon_alignment = 1

[node name="Next" type="Button" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
theme = ExtResource("2_job75")
icon = ExtResource("5_l7pl7")
icon_alignment = 1

[connection signal="pressed" from="VBoxContainer/GridContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/GridContainer/Next" to="." method="_on_next_pressed"]
